--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,10 @@ llama-index-vector-stores-qdrant>=0.4.0
 llama-index-graph-stores-neo4j>=0.4.0
 llama-index-readers-file>=0.4.0
 
-# File parsing (local, no API calls)
-unstructured[all-docs]>=0.16.0
+# File parsing (lightweight - no heavy ML models)
+unstructured>=0.16.0
 python-magic>=0.4.27
+pypdf>=5.0.0
+python-docx>=1.0.0
+python-pptx>=1.0.0
+openpyxl>=3.1.0
