🧹 v0.5.0: Production code cleanup and comprehensive documentation
- Removed all deprecated code (hybrid_property_graph_pipeline.py, hybrid_retriever.py)
- Organized scripts into logical directories (archive/, maintenance/, utilities/)
- Archived 15 one-time debug/fix scripts
- Removed 5 .DS_Store files and improved .gitignore
- Updated README to v0.5.0 with accurate file structure and flow documentation
- Fixed docstrings to reflect current architecture (HybridQueryEngine, SubQuestionQueryEngine)
- Zero deprecated imports or dead code
- Comprehensive .gitignore for production use
- Clean, production-ready codebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,68 @@
-# Environment
+# ============================================================================
+# CORTEX - Enterprise RAG Platform
+# ============================================================================
+
+# Environment Variables
 .env
+.env.local
+.env.*.local
 
 # Dependencies
 node_modules/
 .nango/
 
-# Build
+# Build & Distribution
 build/
+dist/
+*.egg-info/
 
 # Python
 *.pyc
+*.pyo
+*.pyd
 __pycache__/
+*.so
+*.py[cod]
+*$py.class
+
+# Virtual Environments
+venv/
+env/
+ENV/
+.venv
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
 
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Redis
+dump.rdb
+
+# Jupyter
+.ipynb_checkpoints/
