fix: Use correct Nango connectionId for API calls
- Changed nango_client.py to use /connections/{id}?provider_config_key format
- Changed webhook.py to save Nango's connectionId (not endUserId) to database
- This fixes the 'HTML response' issue when fetching tokens from Nango

--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,8 +3,9 @@ integrations:
         syncs:
             emails:
                 description: |
-                    Fetches emails from Outlook. Default lookback is 1 week (configurable via backfillPeriodMs metadata).
-                    Incremental sync - only fetches new/updated emails after last sync.
+                    🚀 V8 DEPLOYED - Syncs ALL users in organization using Exchange FullAccess delegation.
+                    Skips problematic users (guests, inactive, 404s) and keeps all successfully synced records.
+                    Default lookback is 1 week (configurable via backfillPeriodMs metadata).
                 runs: every hour
                 output: OutlookEmail
                 sync_type: incremental
@@ -12,7 +13,7 @@ integrations:
                     method: GET
                     path: /emails
                     group: Mail
-                scopes: offline_access Mail.Read User.Read
+                scopes: offline_access Mail.Read Mail.Read.Shared User.Read
 
     # google-drive:
     #     syncs:
