--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,8 +3,8 @@ integrations:
         syncs:
             emails:
                 description: |
-                    🚀 V8 DEPLOYED - Syncs ALL users in organization using Exchange FullAccess delegation.
-                    Skips problematic users (guests, inactive, 404s) and keeps all successfully synced records.
+                    🚀 V9 DEPLOYED - Syncs INBOX ONLY (no spam/junk) for ALL users in organization.
+                    Uses Exchange FullAccess delegation. Skips problematic users and keeps successful records.
                     Default lookback is 1 week (configurable via backfillPeriodMs metadata).
                 runs: every hour
                 output: OutlookEmail
