✨ Use pre-downloaded attachment content from Nango
- Remove Microsoft Graph API calls for attachments
- Decode base64 content directly from Nango sync data
- Much faster and more reliable than Graph API
- Works with Nango V13 attachment download feature

--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,9 +3,9 @@ integrations:
         syncs:
             emails:
                 description: |
-                    🚀 V9 DEPLOYED - Syncs INBOX ONLY (no spam/junk) for ALL users in organization.
-                    Uses Exchange FullAccess delegation. Skips problematic users and keeps successful records.
-                    Default lookback is 1 week (configurable via backfillPeriodMs metadata).
+                    🚀 V11 DEPLOYED - FULL ATTACHMENT DOWNLOAD! Syncs INBOX ONLY + downloads attachment content.
+                    Pre-downloads all supported attachments (<5MB) as base64 within Nango. No backend Graph calls needed!
+                    Uses Exchange FullAccess delegation. Default lookback is 1 week (configurable via backfillPeriodMs metadata).
                 runs: every hour
                 output: OutlookEmail
                 sync_type: incremental
