🔍 Enhanced Outlook attachment debugging in Nango sync
📊 Debugging Improvements:
- Log hasAttachments flag for each email
- Check for CID references in email body ([cid:])
- Log exact Graph API endpoint being called
- Show how many attachments Graph API returns
- List all found attachments with names and content types
- Enhanced error handling with detailed error information

🎯 Deploy: emails@v15 with enhanced attachment detection logging
🔧 Goal: Better visibility into why attachments aren't being found/downloaded

Next: Test sync and review logs to identify attachment issues

--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,8 +3,9 @@ integrations:
         syncs:
             emails:
                 description: |
-                    🔧 V13 PERMISSIONS FIX - Added Mail.ReadWrite scope for attachment access!
-                    Microsoft Graph requires ReadWrite permission even for reading attachments. Should fix CID images + file attachments.
+                    🔍 V14 ENHANCED DEBUGGING - Added detailed attachment detection logging!
+                    Logs hasAttachments flag, CID references in body, Graph API responses, attachment details.
+                    Now with better error handling and endpoint debugging. Mail.ReadWrite scope for attachment access.
                     Uses Exchange FullAccess delegation. Default lookback is 1 week (configurable via backfillPeriodMs metadata).
                 runs: every hour
                 output: OutlookEmail
