--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,10 +3,10 @@ integrations:
         syncs:
             emails:
                 description: |
-                    🔍 V14 ENHANCED DEBUGGING - Added detailed attachment detection logging!
-                    Logs hasAttachments flag, CID references in body, Graph API responses, attachment details.
-                    Now with better error handling and endpoint debugging. Mail.ReadWrite scope for attachment access.
-                    Uses Exchange FullAccess delegation. Default lookback is 1 week (configurable via backfillPeriodMs metadata).
+                    🔧 V17 ATTACHMENT FIX - Fixed 400 error by removing contentBytes from $select!
+                    Now fetches ALL attachments via $value endpoint. 1-hour lookback for fast testing.
+                    Send yourself test emails with PDF/images and run manual sync to verify attachments download.
+                    Uses Exchange FullAccess delegation. Mail.ReadWrite scope required.
                 runs: every hour
                 output: OutlookEmail
                 sync_type: incremental
@@ -15,6 +15,22 @@ integrations:
                     path: /emails
                     group: Mail
                 scopes: offline_access Mail.ReadWrite Mail.Read.Shared User.Read
+
+    # gmail:
+    #     syncs:
+    #         emails:
+    #             description: |
+    #                 🔍 V1 GMAIL SYNC - Enhanced debugging for Gmail attachment detection!
+    #                 Logs hasAttachments detection, CID references in body, Gmail API responses, attachment details.
+    #                 Downloads attachments as base64 via Gmail API. Default lookback is 1 week (configurable via backfillPeriodMs metadata).
+    #             runs: every hour
+    #             output: GmailEmail
+    #             sync_type: incremental
+    #             endpoint:
+    #                 method: GET
+    #                 path: /emails
+    #                 group: Mail
+    #             scopes: https://www.googleapis.com/auth/gmail.readonly
 
     # google-drive:
     #     syncs:
@@ -63,6 +79,23 @@ models:
         subject: string
         body: string
         attachments: Attachments[]
+        threadId: string
+    
+    GmailAttachment:
+        attachmentId: string
+        filename: string
+        mimeType: string
+        size: number
+        contentBytes: string | undefined
+    
+    GmailEmail:
+        id: string
+        sender: string
+        recipients: string
+        date: string
+        subject: string
+        body: string
+        attachments: GmailAttachment[]
         threadId: string
     
     DriveFile:
