--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -3,9 +3,9 @@ integrations:
         syncs:
             emails:
                 description: |
-                    🔧 V18 FINAL FIX - Removed $select entirely, fetch all attachment metadata!
-                    Only checks attachments if hasAttachments=true. Downloads via $value endpoint.
-                    1-hour lookback for fast testing. Send test emails with PDFs to verify.
+                    ✨ V21 METADATA ONLY - Sync returns email + attachment metadata ONLY!
+                    No attachment content download (like Google Drive approach).
+                    Backend uses /fetch-attachment action on-demand for clean binary handling.
                     Uses Exchange FullAccess delegation. Mail.ReadWrite scope required.
                 runs: every hour
                 output: OutlookEmail
