CRITICAL FIX: Multi-user mailbox attachment support ($25K fix!)
Nango V22:
- Store userId with each email and attachment
- Enables proper multi-user mailbox attachment fetching

Backend:
- Extract userId from attachment metadata
- Use /users/{userId}/ instead of /me/ in Nango proxy
- Fixes 'Item doesn't belong to mailbox' 404 errors

This fixes attachment downloads for all users in org!

--- a/nango-integrations/nango.yaml
+++ b/nango-integrations/nango.yaml
@@ -70,6 +70,7 @@ models:
         mimeType: string
         size: number
         attachmentId: string
+        userId: string
     
     OutlookEmail:
         id: string
@@ -80,6 +81,7 @@ models:
         body: string
         attachments: Attachments[]
         threadId: string
+        userId: string
     
     GmailAttachment:
         attachmentId: string
