--- a/requirements.txt
+++ b/requirements.txt
@@ -36,11 +36,13 @@ llama-index-question-gen-openai>=0.2.0
 
 # File parsing (lightweight - lazy loaded, no heavy ML at startup)
 unstructured>=0.16.0
+unstructured-inference>=0.7.0
 python-magic>=0.4.27
 pypdf>=5.0.0
 python-docx>=1.0.0
 python-pptx>=1.0.0
 openpyxl>=3.1.0
+msoffcrypto-tool>=5.0.0
 pdfminer.six>=20221105
 pillow-heif>=0.10.0
 pi-heif>=0.10.0
