--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ llama-index-question-gen-openai>=0.2.0
 # File parsing (lightweight - lazy loaded, no heavy ML at startup)
 unstructured>=0.16.0
 unstructured-inference>=0.7.0
+unstructured-pytesseract>=0.3.12
 python-magic>=0.4.27
 pypdf>=5.0.0
 python-docx>=1.0.0
