--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn[standard]==0.34.0
 python-multipart==0.0.20
 pydantic==2.10.6
 pydantic-settings==2.7.1
+email-validator==2.2.0  # Required for pydantic EmailStr validation
 
 # HTTP client
 httpx==0.28.1
